--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -37,3 +37,9 @@
     <li><%= comment.user.username %>: <%= comment.body %></li>
   <% end %>
 </ul>
+
+<p>
+  <%= link_to "Edit Track", edit_track_path(@track) %> |
+  <%= link_to "Delete Track", track_path(@track),
+              data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this track?" } %>
+</p>
