--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,32 +22,44 @@
     <%= javascript_importmap_tags %>
   </head>
 
-<body>
-  <header>
-    <div style="display: flex; justify-content: space-between; align-items: center; padding: 10px;">
-      <!-- Left: Login / Logout -->
-      <div>
-        <% if logged_in? %>
-          <%= button_to "Logout", logout_path, method: :delete %>
-        <% else %>
-          <%= link_to "Login", login_path %>
-        <% end %>
-      </div>
+  <body>
+    <header>
+      <div style="display: flex; justify-content: space-between; align-items: center; padding: 10px;">
+        <!-- Left: Login / Logout -->
+        <div>
+          <% if logged_in? %>
+            <%= button_to "Logout", logout_path, method: :delete %>
+          <% else %>
+            <%= link_to "Login", login_path %>
+          <% end %>
+        </div>
 
-      <!-- Center: Logged in as ... -->
-      <div>
-        <% if logged_in? %>
-          <p>Logged in as <%= current_user.username %></p>
-        <% end %>
-      </div>
+        <!-- Center: Logged in as ... -->
+        <div>
+          <% if logged_in? %>
+            <p>Logged in as <%= current_user.username %></p>
+          <% end %>
+        </div>
 
-      <!-- Right: Dashboard -->
-      <div>
-        <%= link_to "Dashboard", dashboard_path %>
+        <!-- Right: Dashboard -->
+        <div>
+          <%= link_to "Dashboard", dashboard_path %>
+        </div>
       </div>
-    </div>
-  </header>
+    </header>
 
-  <%= yield %>
-</body>
+    <%= yield %>
+
+    <% if flash[:notice] %>
+      <div style="color: green; text-align: center; margin: 10px 0;">
+        <%= flash[:notice] %>
+      </div>
+    <% end %>
+
+    <% if flash[:alert] %>
+      <div style="color: red; text-align: center; margin: 10px 0;">
+        <%= flash[:alert] %>
+      </div>
+    <% end %>
+  </body>
 </html>
